--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,12 @@ Type: Package
 Title: Power Analysis for Correlation Coefficients
 Author: Martin Papenberg <martin.papenberg@hhu.de>
 Maintainer: Martin Papenberg <martin.papenberg@hhu.de>
-Depends: R (>= 2.10.0)
-Description: Conduct power analyses for correlation coefficients
-License: GPL (>= 2)
+Depends: R (>= 3.0.0)
+Description: Power analysis for the comparison of independent correlation coefficients.
+License: GPL-2 + file LICENSE
 Encoding: UTF-8
 LazyLoad: yes
-Authors@R: c(person(given="Martin", family="Papenberg",
-        email="martin.papenberg@hhu.de", role=c("aut", "cre")))
-Version: 0.01-1
-Date: 2015-08-20
+URL: https://github.com/m-Py/cower
+Version: 0.0.02
+Date: 2018-07-06
+RoxygenNote: 6.0.1
